experiment/templates/nexmonyx-backend_template.yaml
---
# Source: nexmonyx-backend/templates/database-backend.yaml
---
# Source: nexmonyx-backend/templates/database-backend.yaml
---
# Source: nexmonyx-backend/templates/database-backend.yaml
---
# Source: nexmonyx-backend/templates/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: "nexmonyx"
    component: "backend"
    release: "nexmonyx-backend"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9000"  # Ensure port is quoted to be interpreted as string
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: "nexmonyx"
    component: "backend"
    release: "nexmonyx-backend"
---
# Source: nexmonyx-backend/templates/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: "nexmonyx"
    component: "backend"
    release: "nexmonyx-backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nexmonyx"
      component: "backend"
      release: "nexmonyx-backend"
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
        prometheus.io/path: "/metrics"
      labels:
        app: "nexmonyx"
        component: "backend"
        release: "nexmonyx-backend"
    spec:
      imagePullSecrets:
        []
      securityContext:
        {}
      serviceAccountName: nexmonyx-backend
      containers:
        - name: backend
          securityContext:
            {}
          image: "nexmonyx/backend:v84"
          imagePullPolicy: "IfNotPresent"  # Ensure imagePullPolicy is quoted
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          resources:
            {}
          volumeMounts:
            []  # Adjust indentation
      volumes:
        []  # Adjust indentation
      nodeSelector:
        {}  # Adjust indentation
      affinity:
        {}  # Adjust indentation
      tolerations:
        []  # Adjust indentation
---
# Source: nexmonyx-backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexmonyx-backend
  labels:
    app: nexmonyx
    team: nexmonyx-io
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    cert-manager.io/cluster-issuer-duration: 8760h
    cert-manager.io/cluster-issuer-email: mmattox@support.tools
    cert-manager.io/issue-temporary-certificate: "true"
    external-dns.alpha.kubernetes.io/hostname: "dev-api.nexmonyx.com"
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "dev-api.nexmonyx.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080          
  tls:
  - hosts:
    - "dev-api.nexmonyx.com"
    secretName: cert-backend-tls
